cmake_minimum_required(VERSION 3.9)
project(COP_3503_Rahul_3)

set(CMAKE_CXX_STANDARD 11)

add_executable(COP_3503_Rahul_3
        easy1.cpp
        easy2.cpp
        easy3.cpp
        EasySudoku.cpp
        hard1.cpp
        hard2.cpp
        hard3.cpp
        HexadecimalClass.cpp
        medium1.cpp
        medium2.cpp
        medium3.cpp
        Sudoku.cpp
        Sudoku.h)
